* commit c1b044eec3d6c3c696926d40334528c2c47bb5d5
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jan 28 19:20:32 2014 -0500
| 
|     Now conditionally uses either gpfa or fftw. You have to --enable-fftw to use it. GPFA DOES NOT currently work; segfaulting. I dont understand the meaning of the JUMP and INC parameters.
|  
* commit 2c912e6ef41d53645198708ae8cbd1244565fff2
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jan 28 11:39:43 2014 -0500
| 
|     Combined OMP and serial. Spheres module now reads in all parts of header (can't remember if I did that in this commit or last commit...). Fixed problems with command line/parameter file parsing. Autoconf now erases HOME/.ggadt on uninstall and clean. Should probably change this to work with the GNU standard datadir variable in the future.
|  
* commit 78d14e1df9b511b1de7891929224f2223e69245e
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Tue Jan 28 00:59:48 2014 -0500
| 
|     progress on merging omp and serial versions
|    
*   commit a900c4983de91510b6d34d8416e566f1da33c9d4
|\  Merge: 6053d0c 56da91d
| | Author: John Hoffman <jah5@princeton.edu>
| | Date:   Mon Jan 27 21:10:34 2014 -0500
| | 
| |     Merging gpfa
| |   
| * commit 56da91d3cde43d12cf9e91f789def97db60438ad
| | Author: John Hoffman <jah5@princeton.edu>
| | Date:   Mon Jan 27 03:20:43 2014 -0500
| | 
| |     Added gpfa.f90 and a serial module file. The beginning...
| |   
* | commit 6053d0c5d7a749944994e3cb8c96f4ae5ba36dc1
| | Author: John Hoffman <jah5@princeton.edu>
| | Date:   Mon Jan 27 20:50:25 2014 -0500
| | 
| |     Fixed problem with command-line/parameter file mixtures -- it appears you must quote strings in the parameter files. ALSO: Spheres module (both omp and serial) now read in the header information. Before, we hardcoded nspheres into the program and never changed it
| |   
* | commit 6b876cb65b2ae5aafc562b0048c6c7c3c1efca11
| | Author: John Hoffman <jah5@princeton.edu>