@@ -1,3 +1,9 @@
+* commit f3730b79d855d168f2e15e1cae2b17f34c182aa7
+| Author: John Hoffman <jah5@princeton.edu>
+| Date:   Wed Jan 29 17:57:40 2014 -0500
+| 
+|     Used calls in cxf...f90 to figure out how to use GPFA correctly. Now ggadt mysteriously segfaults, and I cannot find where this happens, since the segfault occurs after the cleanup() command. I'm trying to get gdb working to figure out the problem.
+|  
 * commit c1b044eec3d6c3c696926d40334528c2c47bb5d5
 | Author: John Hoffman <jah5@princeton.edu>
 | Date:   Tue Jan 28 19:20:32 2014 -0500
